Fixed slider styles for slide-images an buttons on mobile-media.

--- a/css/main.css
+++ b/css/main.css
@@ -818,6 +818,7 @@ label {
 }
 .slider__wrapper {
   width: 100%;
+  height: 100%;
   background-color: rgba(25, 28, 38, 0.2);
   overflow: hidden;
 }
@@ -826,14 +827,20 @@ label {
   left: 0;
   z-index: -50;
   display: flex;
+  height: 100%;
   transition: 250ms;
 }
 .slider__buttons {
-  position: absolute;
-  right: 20px;
-  bottom: 40px;
-  display: inline-flex;
-  gap: 24px;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .slider__buttons {
+    position: absolute;
+    right: 20px;
+    bottom: 40px;
+    display: inline-flex;
+    gap: 24px;
+  }
 }
 .slider__button {
   position: relative;
@@ -908,6 +915,7 @@ label {
 }
 .slider__slide {
   min-width: 100%;
+  height: 100%;
 }
 .slider__image {
   height: 100%;
