--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -2,7 +2,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  // z-index: -1;
 
   width: 100%;
   height: 100%;
@@ -18,6 +17,7 @@
 
   &__wrapper {
     width: 100%;
+    height: 100%;
     background-color: getColor('sliderOverlay');
     overflow: hidden;
   }
@@ -27,15 +27,20 @@
     left: 0;
     z-index: -50;
     display: flex;
+    height: 100%;
     transition: 250ms;
   }
 
   &__buttons {
-    position: absolute;
-    right: 20px;
-    bottom: 40px;
-    display: inline-flex;
-    gap: 24px;
+    display: none;
+
+    @include tablet {
+      position: absolute;
+      right: 20px;
+      bottom: 40px;
+      display: inline-flex;
+      gap: 24px;
+    }
   }
 
   &__button {
@@ -123,7 +128,7 @@
 
   &__slide {
     min-width: 100%;
-    // height: 100%;
+    height: 100%;
   }
 
   &__image {
